--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -14,9 +14,6 @@ body{
 	width: 85%;
 }
 
-.main_div{
-	
-}
 .topBorder
 {
 	position:absolute;
@@ -33,7 +30,7 @@ body{
 }
 
 .input-field{
-	margin-top: 0px;
+	margin-top: 1px;
 }
 
 .submit_btn{
@@ -60,7 +57,7 @@ body{
 
 .login_sec{
 	background-color: #c62828;
-	height: 35.3vw;
+	height: 35.6vw;
 }
 .login{
 	margin-top:6vw;
@@ -69,3 +66,45 @@ body{
 .test5{
 	color: white;
 }
+
+.select-wrapper input.select-dropdown{
+	color: #c62828;
+}
+
+select:disabled {
+  color: #c62828
+}
+
+.select-wrapper input.select-dropdown:disabled {
+ 	color: #c62828;
+}
+
+.select-dropdown li.disabled,
+.select-dropdown li.disabled > span,
+.select-dropdown li.optgroup {
+  color: #c62828;
+}
+
+.select-dropdown li.optgroup.selected > span {
+  color: #c62828;
+}
+
+.select-dropdown li.optgroup > span {
+  color: #c62828;
+}
+
+.select-wrapper span.caret {
+	color: #c62828;
+}
+
+.picker__day--selected,
+.picker__day--selected:hover,
+.picker--focused .picker__day--selected {
+  border-radius: 50%;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  background-color: #26a69a;
+  color: #ffffff;
+}
+
+
