--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -108,3 +108,43 @@ select:disabled {
 }
 
 
+/**media queries*/
+
+@media only screen and (min-width: 320px) and (max-width: 480px)
+{
+	.login_sec{
+	height: 115vw;
+	}
+}
+
+@media only screen and (max-width: 320px){
+	.login_sec{
+	height: 130vw;
+	}
+}
+
+@media only screen and (min-width: 480px) and (max-width: 768px){
+	.login_sec{
+	height: 85vw;
+	}
+}
+
+@media only screen and (min-width: 768px) and (max-width: 920px)
+{
+	.login_sec{
+	height: 60.5vw;
+	}
+}
+
+@media only screen and (min-width: 920px) and (max-width: 1024px){
+	.login_sec{
+	height: 47.5vw;
+	}
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1365px)
+{
+	.login_sec{
+	height: 46vw;
+	}
+}
