--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body{
 { 
    
   box-shadow: none;
-
+  margin-left: 0vh;
   background-color: transparent;
   transition:background-color 1s;
   position: fixed; 
@@ -28,7 +28,11 @@ body{
   font-weight: bold;
   margin-top: 0.5vw;
 }
-
+.nav-wrapper
+{
+  margin-left: 0vh;
+  
+}
 nav ul li a
 {
   color:white;
