Added login authetication to all buttons on mainPage and logout facility to Dashboard

--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,11 @@ footer
 {
   color:#c62828;
 }
-
+.filter_chip
+{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 @media only screen and (max-width: 768px){
 nav,header, main, footer 
 {
