--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,6 @@ body,html
 	 font-family: 'Dosis', sans-serif;
 
 }
-
-
 .side-nav
 {
 	background-color: #c62828;
@@ -64,8 +62,12 @@ select
 	color:  #c62828;
 	font-size: 22px;
 }
-
-.user_profile_content,.blood_sure_section,.history_section
+.info_heading
+{
+	color:   #c62828;
+	font-size: 22px;
+}
+.user_profile_content,.blood_sure_section,.history_section,
 {
 	height:100%;
 	background-color:#f8f9fa;
@@ -81,10 +83,11 @@ select
 	border:1px solid #f5f5f5;
 	height: 80%;
 }
+/*
 .card img
 {
 	height:300px;
-}
+}*/
 
 .total
 {
@@ -195,7 +198,7 @@ footer
 .card_head
 {
   background-color: #c62828;
-  padding-top: 30%;
+  padding-top: 8vh;
 }
 .card_head h3
 {
@@ -205,7 +208,7 @@ footer
 .card_head_donate
 {
   background-color: white;
-  padding-top: 30%;
+  padding-top: 8vh;
 }
 .card_head_donate h3
 {
@@ -213,24 +216,41 @@ footer
 }
 .filter_chip
 {
-  padding-top: 20px;
+  margin-top: 30px;
+}
+.donor-table
+{
   padding-bottom: 20px;
 }
-
-.hospital_container{
-  padding-left: -500px;
-  padding-right: 0px;
-}
-
-.fields{
-  padding-top: 5vw;
-  padding-bottom: 1vw;
-}
-
-@media only screen and (max-width: 768px){
-nav,header, main, footer 
+.select_button
 {
-   padding-left: 0;
+  position:absolute;
+  top:2vh;
+  left:100%;
+  margin-left: 10px;
+  background-color: #c62828;
+}
+.select_button:hover
+{
+  background-color: white;
+  color:#c62828;
+}
+
+.findDonorImg img
+{
+  height:200px;
+  width:50%;
+}
+.beDonorImg img
+{
+  height:200px;
+  width:50%;
+}
+@media only screen and (max-width: 768px){
+.myNavbar
+{
+  background-color:white;
+  padding-left: 0px;
 }
 .myContainer
 {
@@ -293,10 +313,11 @@ select:disabled {
 
 @media only screen and (max-width : 992px) {
       
-      nav,header, main, footer 
-      {
-        padding-left: 0;
-      }
+.myNavbar
+{
+  background-color:white;
+  padding-left: 0px;
+}
       .myContainer
       {
       	padding-left: 0;
@@ -308,8 +329,8 @@ select:disabled {
 /* added by me*/
 /*adding css of map*/
 
-.map{
-  height: 300px;
+#map{
+  height: 400px;
 }
 
 .info_heading
