--- a/css/main.css
+++ b/css/main.css
@@ -314,7 +314,6 @@ video {
 .modal{
   height: 100%;
   width:48%;
-  border: 5px solid #c62828 ;
 }
 
 
@@ -922,3 +921,14 @@ footer.page-footer .social-section
     padding-bottom: 20px;
 }
 */
+.mainPagemodal
+{
+  margin-top:8%;
+  height:70%;
+
+}
+
+.mainPagemodal_form
+{
+  padding:10px;
+}
