--- a/css/style.css
+++ b/css/style.css
@@ -342,3 +342,16 @@ select:disabled {
   /* add ended*/
 }
 
+.userprofileModal
+{
+  margin-top:5%;
+  margin-left:30%;
+  height:100%;
+  
+  background-color:#f5f5f5;
+  overflow: hidden;
+}
+.userprofileForm
+{
+  padding: 30px;
+}
