--- a/css/main.css
+++ b/css/main.css
@@ -721,214 +721,71 @@ footer
 
 
 
-/*.page-footer{
-  background-color: #c62828;
-}
 
-.footer-copyright{
-  border:none;
-  box-shadow: none;
-  background: linear-gradient(rgba(255,0,0,0),rgba(255,0,0,0));
-}
-
-
-
-@media only screen and (min-width:320px) and (max-width:640px){
-    .overlay2
-    {
-        display: none;
-    }
-
-}
-@media (max-width: 360px){
-     .social-section ul
-    {
-        padding-right: 30px !important;
-        padding-left: 30px !important;
-    }
-    .social-section .fbIcon,.social-section .twitterIcon,.social-section .youtubeIcon,.social-section .linkedinIcon
-    {
-        font-size:30px !important;
-    }
-    .social-section button
-    {
-        background-color: transparent;
-        box-shadow: none;
-        width: 5px !important;
-        padding-left: 0px !important;
-    }
-
-
-    
-}
-
-
-@media (max-width:480px ){
-    .logo
-    {
-        padding-left: 10px !important;
-
-        padding-bottom: 20px;
-    }
-    iframe
-    {
-        width:250px;
-    }
-    .social-section .fbIcon,.social-section .twitterIcon,.social-section .youtubeIcon,.social-section .linkedinIcon
-    {
-        font-size:30px !important;
-    }
-    .social-section button
-    {
-        background-color: transparent;
-        box-shadow: none;
-        width: 5px !important;
-        padding-left: 10px !important;
-    }
-     .social-section ul
-    {
-        padding-right: 30px !important;
-        padding-left: 30px !important;
-    }
-}
-
-
-  @media(max-width: 580px){
-
-    .logo
-    {
-        padding-left: 0px !important;
-
-        padding-bottom: 20px;
-    }
-
-      .social-section ul
-    {
-        padding-right: 30px !important;
-        padding-left: 70px !important;
-    }
-  }  
-
-
-.title
-{
-    
-    font-size: 25px;
-
-}
-.social-section
-{
-    text-align: center;
-    
-}
-
-.social-section button
-{
-    background-color: transparent;
-    box-shadow: none;
-    width: 20px !important;
-    padding-left: 50px;
-}
-.social-section button:hover
-{
-    box-shadow: none;
-    background-color: none !important;
-}
-
-
-.social-section .fbIcon
-{
-    font-size: 40px;
-}
-.social-section .fbIcon:hover
-{
-    color:#3b5998;
-}
-
-.social-section .twitterIcon
-{
-    font-size: 40px;
-}
-.social-section .twitterIcon:hover
-{
-    color:#55acee;
-}
-
-.social-section .youtubeIcon
-{
-    font-size: 40px;
-}
-.social-section .youtubeIcon:hover
-{
-    color:#bb0000;
-}
-
-.social-section .linkedinIcon
-{
-    font-size: 40px;
-}
-
-.social-section .linkedinIcon:hover
-{
-    color:#007bb5;
-}
-
-footer.page-footer .social-section
-{
-    text-align: left;
-}
-
-.footer_section
-{
-    padding-top: 20px;
-    padding-bottom: 20px;
-
-} 
-.footer_section ul
-{
-    text-align: center;
-}
-.footer_section ul a:hover
-{
-    text-decoration: none;
-    color:rgb(251, 118, 27);
-}
-
-.foot_link a:hover
-{
-    text-decoration: none;
-    color:rgb(251, 118, 27);
-    background-color: none;
-}
-
-.logo img
-{
-    width:60%;
-    height:100%;
-}
-.logo
-{
-    padding-left: 25%;
-
-    padding-bottom: 10px;
-}
-.logoImg
-{
-    text-decoration: none;
-}
-.map
-{
-    padding-bottom: 20px;
-}
-*/
 .mainPagemodal
 {
   margin-top:8%;
   height:70%;
+  overflow: hidden
+}
 
+.cancel_btn{
+  background-color: #c62828;
+  color: white;
+}
+
+.cancel_btn:hover{
+  background-color: white;
+  color: #c62828;
 }
 
 .mainPagemodal_form
 {
   padding:10px;
+}
+
+.select-wrapper input.select-dropdown{
+  color: #c62828;
+}
+
+select:disabled {
+  color: #c62828
+}
+
+.select-wrapper input.select-dropdown:disabled {
+  color: #c62828;
+}
+
+.select-dropdown li.disabled,
+.select-dropdown li.disabled > span,
+.select-dropdown li.optgroup {
+  color: #c62828;
+}
+
+.select-dropdown li.optgroup.selected > span {
+  color: #c62828;
+}
+
+.select-dropdown li.optgroup > span {
+  color: #c62828;
+}
+
+.select-wrapper span.caret {
+  color: #c62828;
+}
+
+@media only screen and (max-width: 768px){
+  .mainPagemodal
+  {
+    margin-top:18%;
+    height:100%;
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 320px){
+ .mainPagemodal
+  {
+    width: 95%;
+  } 
 }
