--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -13,6 +13,10 @@ body{
 	width: 85%;
 }
 
+.main_div{
+	margin-top: 2vw
+}
+
 .icons{
 	padding-top: 2vw;
 	padding-left: 2.2vw;
@@ -47,7 +51,7 @@ body{
 
 .login_sec{
 	background-color: #c62828;
-	height: 35.6vw;
+	height: 32.3vw;
 }
 .login{
 	margin-top:6vw;
