--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,6 @@ body,html
 	color:white;
 }
 
-
-
 .side-nav li > a:hover {
   background-color:#e0e0e0;
   color: #c62828;
@@ -112,89 +110,6 @@ padding-bottom: 4.8vw;
 	font-size: 24px;
 }
 
-
-
-footer
-{
-  background-color: #c62828;
-}
-.dashboard_footer{
-  padding-left: 300px;
-}
-
-.foot{
-  margin-top: 3vw;
-  margin-bottom: 6vw;
-  text-align: center;
-}
-
-.pgfoot{
-  background: url(img/back1.jpg);
-}
-
-.foota{
-  padding: 0.5vw;
-}
-
-.fa {
-    padding: 10px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-    height: 40px;
-    margin-top: 10px;
-}
-
-.fa-facebook {
-    background: #3B5998;
-    color: white;
-}
-
-.fa-facebook:hover{
-  background-color: white;
-  color: blue;
-}
-.fa-twitter {
-    background: #55ACEE;
-    color: white;
-}
-
-.fa-twitter:hover{
-  background-color: white;
-  color: blue;
-}
-
-.fa-google {
-  background: #dd4b39;
-  color: white;
-}
-
-.fa-google:hover{
-  background-color: white;
-  color:red;
-}
-
-.fa-pinterest {
-  background: #ef5350 ;
-  color: white;
-}
-
-.fa-pinterest:hover{
-  background-color: white;
-  color: red;
-}
-
-
-.page-footer{
-  background-color: #c62828;
-}
-
-.footer-copyright{
-  border:none;
-  box-shadow: none;
-  background: linear-gradient(rgba(255,0,0,0),rgba(255,0,0,0));
-}
 .card_head
 {
   background-color: #c62828;
@@ -246,40 +161,6 @@ footer
   height:200px;
   width:50%;
 }
-@media only screen and (max-width: 768px){
-.myNavbar
-{
-  background-color:white;
-  padding-left: 0px;
-}
-.myContainer
-{
-   padding-left: 0;
-   padding-right: 0px;
-      	
-}	
-.mynav .user_info
-{
-	color:  #B71C1C;
-	font-size: 18px;
-}
-.info_heading
-{
-	color:  #B71C1C;
-	font-size: 22px;
-}
-.total
-{
-	padding-top:15px;
-	font-size: 18px;
-}
-.payment
-{
-	padding-top:5px;
-}
-
-
-}
 
 .select-wrapper input.select-dropdown{
   color: #c62828;
@@ -311,24 +192,6 @@ select:disabled {
   color: #c62828;
 }
 
-@media only screen and (max-width : 992px) {
-      
-.myNavbar
-{
-  background-color:white;
-  padding-left: 0px;
-}
-      .myContainer
-      {
-      	padding-left: 0;
-      	padding-right: 0px;
-      	
-      }
-    }
-
-/* added by me*/
-/*adding css of map*/
-
 #map{
   height: 400px;
 }
@@ -347,11 +210,69 @@ select:disabled {
   margin-top:5%;
   margin-left:30%;
   height:100%;
-  
   background-color:#f5f5f5;
   overflow: hidden;
 }
 .userprofileForm
 {
   padding: 30px;
+}
+
+@media only screen and (max-width: 768px){
+    .myNavbar
+    {
+      background-color:white;
+      padding-left: 0px;
+    }
+    .myContainer
+    {
+       padding-left: 0;
+       padding-right: 0px;
+          	
+    }	
+    .mynav .user_info
+    {
+    	color:  #B71C1C;
+    	font-size: 18px;
+    }
+    .info_heading
+    {
+    	color:  #B71C1C;
+    	font-size: 22px;
+    }
+    .total
+    {
+    	padding-top:15px;
+    	font-size: 18px;
+    }
+    .payment
+    {
+    	padding-top:5px;
+    }
+}
+
+
+@media only screen and (max-width : 992px) {
+      
+.myNavbar
+{
+  background-color:white;
+  padding-left: 0px;
+}
+      .myContainer
+      {
+      	padding-left: 0;
+      	padding-right: 0px;
+      	
+      }
+    }
+
+/* added by me*/
+/*adding css of map*/
+
+@media only screen and (max-width: 768px){
+  .userprofileModal
+  { 
+      margin-left:12%;
+  }
 }
