--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,17 @@ body,html
 	 font-family: 'Dosis', sans-serif;
 
 }
+body::-webkit-scrollbar {
+    width: 0.5em;
+}
+ 
+body::-webkit-scrollbar-track {
+    background-color: white;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #c62828;
+}
 .side-nav
 {
 	background-color: #c62828;
