--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 
+
 /*----------------------------------Css related to navbar starts here-----------------------------------------*/
 
 .main_menu{
@@ -30,7 +31,14 @@ body::-webkit-scrollbar-thumb {
   position: fixed; 
   z-index: 4;
 }
-
+.iconImage
+{
+  width:90px;
+   height:60px; 
+   position:absolute;
+   top:5%;
+   left:-30%
+}
 
 
 .nav-wrapper .heading1
@@ -39,6 +47,7 @@ body::-webkit-scrollbar-thumb {
   color: white;  
   font-size: 2vw;
   font-weight: bold;
+  padding-left:2%;
  
 }
 .nav-wrapper
@@ -122,6 +131,7 @@ video {
 .vsec{
   z-index: 2;
   height:100vh;
+  width:100%;
   background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
 }
 
@@ -167,6 +177,7 @@ video {
 .scroll
 {
   color:white;
+  padding-top:6%;
   position: relative;
   -webkit-animation: mymove 5s infinite; 
   animation: mymove 5s infinite;
