--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,7 +4,17 @@
 .nav-wrapper .heading1
 {
 	font-size: 18px;
+
 }
+.iconImage
+{
+  width:60px;
+   height:50px; 
+   position:absolute;
+   top:7%;
+   left:-50%;
+}
+
 
 /*----------------------------------CSS realted to navbar ends here------------------------------------------*/
 
@@ -33,7 +43,11 @@
 	border-left: none;
 }
 
-
+.scroll
+{
+    padding-top:10%;
+ 
+}
 /*----------------------------------Css related to Landing page ends here-----------------------------------------*/
 
 
@@ -547,14 +561,14 @@ video {
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-79%) translateY(-50%);   
+    transform: translateX(-76.6%) translateY(-50%);   
     background-size: cover;
     transition: 1s opacity;
     overflow: hidden;
 }
 .vsec{
   z-index: 2;
-  height:90vh;
+  height:100vh;
   background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6));
 }
 
