--- a/css/style.css
+++ b/css/style.css
@@ -237,10 +237,13 @@ select:disabled {
   height:100%;
   background-color:#f5f5f5;
   overflow: hidden;
+
 }
 .userprofileForm
 {
   padding: 30px;
+    padding-bottom: 3%;
+
 }
 
 @media only screen and (max-width: 768px){
